hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_no_compound.php
<?hh

async function f() {
  concurrent $x = await genx();
}
